# ai-driven-project-template

./: .coveragerc  .gitattributes  .gitignore  README.md  Taskfile.yml  pyproject.toml  pytest.ini  repo-design.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: architect.agent.md  architect.md  developer.agent.md  developer.md  reviewer.agent.md  reviewer.md  tester.agent.md  tester.md
.github/instructions/: aws.instructions.md  python.instructions.md  testing.instructions.md
.github/prompts/: bug-fix.md  bug-fix.prompt.md  code-impl.prompt.md  code-review.md  code-review.prompt.md  design-impl.prompt.md  feature-coding.prompt.md  feature-design.prompt.md  feature-impl.md  feature-impl.prompt.md
.github/skills/: aws-skills.md  coding-skills.md  testing-skills.md
.github/skills/create-adr/: SKILL.md
.github/skills/create-readme/: SKILL.md
.github/skills/git-commit/: SKILL.md
.github/skills/git-conventional-commits/: SKILL.md
.github/skills/write-adr/: SKILL.md
.github/skills/write-readme/: SKILL.md
.github/workflows/: ci.yml
contracts/: README.md
contracts/api/: openapi.yml
contracts/api/examples/: create-user.json
contracts/database/: access-patterns.md  er.md  table-definitions.yml
contracts/events/examples/: user-created.json
contracts/events/schemas/: user-created.schema.json
docs/: README.md  glossary.md
docs/adr/: 0001-serverless.md  0002-event-driven.md  README.md
docs/architecture/: overview.md  patterns.md
docs/architecture/diagrams/: component.pu  (+1 more)
docs/requirements/: business.md  system.md
infra/cdk/: README.md  app.py  cdk.json  package.json  tsconfig.json
research/performance/: load-test-results.md
tests/e2e/: README.md  test-plan.md  test-report.md  test-spec.md  test_api_e2e.py
tests/fixtures/: users.json
tests/integration/: README.md  test-plan.md  test-report.md  test-spec.md  test_user_flow.py
tools/: README.md
(+13 files in other folders)
